--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.2",
     "react-automata": "^3.0.0",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "styled-components": "^3.3.3"
   },
